--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "watch": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "core-js": "^3.8.3",
     "swiper": "^8.4.5",
     "vue": "^3.2.13",
