--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/validators": "^2.0.0",
     "core-js": "^3.8.3",
     "swiper": "^8.4.5",
+    "uikit": "^3.15.19-dev.ec3157842",
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
