--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
     "swiper": "^8.4.5",
     "vue": "^3.2.13",
