--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "swiper": "^8.4.5",
     "vue": "^3.2.13",
